--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -24,6 +24,8 @@
     "url": "https://github.com/AztecProtocol/AZTEC/issues"
   },
   "dependencies": {
+    "@democracy.js/keys": "0.0.4",
+    "ethjs": "0.4.0",
     "openzeppelin-solidity": "2.0.0"
   },
   "devDependencies": {
@@ -41,7 +43,6 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
-    "ethereumjs-tx": "^1.3.7",
     "fs-extra": "^7.0.1",
     "ganache-cli": "^6.3.0",
     "lodash": "^4.17.11",
