Add temporary fs and path hacks to get the old demo to work with BrowserFS in webify. Add cli and securityRegistry stuff for later.

--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@democracy.js/keys": "0.0.4",
+    "@democracy.js/utils": "0.1.0",
+    "democracy.js": "0.2.5",
     "ethjs": "0.4.0",
     "openzeppelin-solidity": "2.0.0"
   },
